fixed contrast for table caption

--- a/1Home.css
+++ b/1Home.css
@@ -53,6 +53,7 @@ body {
         grid-row: auto auto;
         grid-column-gap: 20px;
         grid-row-gap: 20px;
+        
 }
 
 .box{
@@ -61,6 +62,7 @@ body {
     border-radius:10px;
     color:#fff;
     display:flex;
+    flex-wrap: wrap;
     align-items:center;
     justify-content:center;
     font-size:15px;
@@ -91,15 +93,18 @@ footer {
 }
 
 @media screen and (max-width:450px){
-    
+    #1, #2, #3, #4{
+      width: 100%;
+    }
 }
 
 caption {
-    background-color: royalblue;
+    background-color: #333;
+    color: lightcyan;
 }
 
 table {
-    width: 50%;
+    width: 80%;
     border-collapse: collapse;
     background-color: #FFFFFF;
     margin-left: auto;
